...
    <!--App-->
    <string name="app_name">Legado</string>
    <string name="app_name_a">Legado·A</string>
    <string name="app_name_s" translatable="false">LegadoPlus</string>
    <string name="receiving_shared_label">Legado·search</string>
    <string name="receiving_shared_import_label">Legado·import</string>
    <string name="tip_perm_request_storage">Legado needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>

    <!--Other-->
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Legado data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
...
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="backup_fail">Backup failed\n%s</string>
    <string name="on_restore">Restoring</string>
    <string name="restore_success">Restore succeed</string>
    <string name="restore_fail">Backup failed</string>
...
    <string name="book_intro_expand">Expand</string>
    <string name="book_intro_collapse">Collapse</string>
    <string name="intro_show">Description:%s</string>
    <string name="intro_show_null">Description: no introduction</string>
    <string name="open_from_other">Open external book</string>
    <string name="origin_show">Origin: %s</string>
    <string name="import_replace_rule">Import replace rules</string>
    <string name="import_replace_rule_on_line">Import online rules</string>
    <string name="check_update_interval">Check interval for updates</string>
    <string name="bookshelf_px_0">By recent list</string>
    <string name="bookshelf_px_1">By update time</string>
    <string name="bookshelf_px_2">By book title</string>
    <string name="bookshelf_px_3">By sort manually</string>
...
    <string name="sync_book_progress_plus_t">Sync Enhancement</string>
    <string name="sync_book_progress_plus_s">Sync cloud progress when re-entering the page (screen off, returning from background, etc.) or when the network becomes available. You will be prompted before syncing new progress.</string>
    <string name="sync_book_progress_success">Sync progress success</string>
    <string name="create_bookmark_error">Failed to create bookmark</string>
    <string name="single_url">Single URL</string>
    <string name="export_bookshelf">Export the list of books</string>
    <string name="import_bookshelf">Import the list of books</string>
    <string name="pre_download">Download in advance</string>
    <string name="pre_download_m">Pre-download %s pages</string>
    <string name="pre_download_s">Download %s chapters in advance</string>
    <string name="is_enabled">Is enabled</string>
    <string name="background_image">Background image</string>
    <string name="background_image_blurring">Background image blurring</string>
...
