...
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/secondaryText"
            tools:ignore="RtlHardcoded" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:padding="12dp"
            android:text="@string/ok"
            tools:ignore="RtlHardcoded" />
...
